--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
                             <overwrite>true</overwrite>
                             <resources>
                                 <resource>
-                                    <directory>${project.basedir}/bls_frontend/dist</directory>
+                                    <directory>${project.basedir}/dist</directory>
                                     <includes>
                                         <include>static/</include>
                                         <include>index.html</include>
