--- a/bls_frontend/package.json
+++ b/bls_frontend/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.6.11",
     "vue-click-outside": "^1.1.0",
     "vue-router": "^3.2.0",
+    "vue-scrollto": "^2.20.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
