--- a/bls_backend/pom.xml
+++ b/bls_backend/pom.xml
@@ -18,7 +18,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -65,7 +65,6 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-core</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -114,24 +113,21 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>Copy Vue.js frontend assets</id>
-                        <phase>generate-resources</phase>
+                        <id>Copy Vue frontend into Spring Boot target static folder</id>
+                        <phase>process-resources</phase>
                         <goals>
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>src/main/resources/public</outputDirectory>
-                            <overwrite>true</overwrite>
+                            <outputDirectory>src/main/resources/static</outputDirectory>
                             <resources>
                                 <resource>
                                     <directory>${project.parent.basedir}/bls_frontend/dist</directory>
-                                    <includes>
-                                        <include>static/</include>
-                                        <include>index.html</include>
-                                    </includes>
+                                    <filtering>true</filtering>
                                 </resource>
                             </resources>
                         </configuration>
@@ -160,6 +156,7 @@
                                 </goals>
                                 <configuration>
                                     <productionMode>true</productionMode>
+                                    <!--compatabilityMode>true</compatabilityMode-->
                                 </configuration>
                             </execution>
                         </executions>
