--- a/bls_frontend/package.json
+++ b/bls_frontend/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
+    "vue": "^2.6.13",
     "vue-click-outside": "^1.1.0",
+    "vue-loader": "^15.9.7",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
