--- a/bls_frontend/pom.xml
+++ b/bls_frontend/pom.xml
@@ -13,7 +13,10 @@
     </parent>
 
     <properties>
-        <frontend-maven-plugin.version>1.12.0</frontend-maven-plugin.version>
+        <!--frontend-maven-plugin.version>1.12.0</frontend-maven-plugin.version-->
+        <java.version>11</java.version>
+        <node.version>v10.15.0</node.version>
+        <npm.version>6.14.3</npm.version>
     </properties>
 
     <packaging>war</packaging>
@@ -30,36 +33,47 @@
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
-                <version>${frontend-maven-plugin.version}</version>
+                <version>1.7.6</version>
+
                 <executions>
                     <execution>
-                        <id>install node and npm</id>
+                        <id>Install node and npm</id>
                         <goals>
                             <goal>install-node-and-npm</goal>
                         </goals>
+                        <phase>generate-resources</phase>
                         <configuration>
-                            <nodeVersion>v15.8.0</nodeVersion>
+                            <nodeVersion>${node.version}</nodeVersion>
+                            <npmVersion>${npm.version}</npmVersion>
                         </configuration>
                     </execution>
+
                     <execution>
                         <id>npm install</id>
                         <goals>
                             <goal>npm</goal>
                         </goals>
+                        <phase>generate-resources</phase>
                         <configuration>
                             <arguments>install</arguments>
                         </configuration>
                     </execution>
+
                     <execution>
-                        <id>npm run build</id>
+                        <id>npm build</id>
                         <goals>
                             <goal>npm</goal>
                         </goals>
+                        <phase>generate-resources</phase>
                         <configuration>
                             <arguments>run build</arguments>
                         </configuration>
                     </execution>
                 </executions>
+                <configuration>
+                    <nodeVersion>${node.version}</nodeVersion>
+                    <!--workingDirectory>bls_frontend</workingDirectory-->
+                </configuration>
             </plugin>
         </plugins>
     </build>
