--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+bls_frontend/BLS_Tool.war
 
 ### STS ###
 .apt_generated
