--- a/bls_backend/pom.xml
+++ b/bls_backend/pom.xml
@@ -18,7 +18,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <dependencies>
         <dependency>
