--- a/bls_frontend/package.json
+++ b/bls_frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "vue": "^2.6.13",
     "vue-click-outside": "^1.1.0",
     "vue-loader": "^15.9.7",
@@ -36,6 +37,6 @@
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
     "vue-cli-plugin-bootstrap-vue": "~0.7.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.14"
   }
 }
