--- a/bls_frontend/.env.production
+++ b/bls_frontend/.env.production
@@ -4,4 +4,4 @@ VUE_APP_PATH_BASE=/BLS_Tool
 VUE_APP_BASE_API_URL=http://basecamp-demos.informatik.uni-hamburg.de:8080/bls_backend-0.0.1-SNAPSHOT
 
 # For deployment through apache
-#VUE_APP_BASE_API_URL=https://basecamp-demos.informatik.uni-hamburg.de/bls_backend-0.0.1-SNAPSHOT
+#VUE_APP_BASE_API_URL=https://basecamp-demos.informatik.uni-hamburg.de/bls_backend
